--- a/prolog/Untitled.ipynb
+++ b/prolog/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "id": "6356aebd-d176-4958-8495-b85983e16bec",
    "metadata": {},
    "outputs": [
@@ -18,6 +18,449 @@
    ],
    "source": [
     "[jsonparse]."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "57ead276-206c-4088-852a-554fa9a1c73e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "            details  {\n",
+       "              font-family: Menlo, Consolas, 'DejaVu Sans Mono', monospace; font-size: 13px;\n",
+       "            }\n",
+       "\n",
+       "            details > summary {\n",
+       "              cursor: pointer;\n",
+       "            }\n",
+       "            </style>\n",
+       "            <details><summary>Previously defined clauses of user:json_write/2 were retracted (click to expand)</summary><pre>json:json_write(Stream, Term) :-\n",
+       "    json_write(Stream, Term, []).\n",
+       "\n",
+       ":- dynamic json_write/2.\n",
+       "\n",
+       "json_write(A, B) :-\n",
+       "    atom(B),\n",
+       "    open(B, write, C),\n",
+       "    gtrace,\n",
+       "    write_JSON(A, C),\n",
+       "    close(C).\n",
+       "</pre></details>"
+      ],
+      "text/plain": [
+       "Previously defined clauses of user:json_write/2 were retracted:\n",
+       "json:json_write(Stream, Term) :-\n",
+       "    json_write(Stream, Term, []).\n",
+       "\n",
+       ":- dynamic json_write/2.\n",
+       "\n",
+       "json_write(A, B) :-\n",
+       "    atom(B),\n",
+       "    open(B, write, C),\n",
+       "    gtrace,\n",
+       "    write_JSON(A, C),\n",
+       "    close(C).\n"
+      ]
+     },
+     "metadata": {
+      "application/json": {}
+     },
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "% Asserting clauses for user:json_write/2\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "            details  {\n",
+       "              font-family: Menlo, Consolas, 'DejaVu Sans Mono', monospace; font-size: 13px;\n",
+       "            }\n",
+       "\n",
+       "            details > summary {\n",
+       "              cursor: pointer;\n",
+       "            }\n",
+       "            </style>\n",
+       "            <details><summary>Previously defined clauses of user:write_JSON/2 were retracted (click to expand)</summary><pre>:- dynamic write_JSON/2.\n",
+       "\n",
+       "write_JSON(jsonobj(A), B) :-\n",
+       "    !,\n",
+       "    write(B, '{'),\n",
+       "    write_members(A, B),\n",
+       "    write(B, '}').\n",
+       "write_JSON(jsonarray(A), B) :-\n",
+       "    !,\n",
+       "    write(B, '['),\n",
+       "    write_elements(A, B),\n",
+       "    write(B, ']').\n",
+       "</pre></details>"
+      ],
+      "text/plain": [
+       "Previously defined clauses of user:write_JSON/2 were retracted:\n",
+       ":- dynamic write_JSON/2.\n",
+       "\n",
+       "write_JSON(jsonobj(A), B) :-\n",
+       "    !,\n",
+       "    write(B, '{'),\n",
+       "    write_members(A, B),\n",
+       "    write(B, '}').\n",
+       "write_JSON(jsonarray(A), B) :-\n",
+       "    !,\n",
+       "    write(B, '['),\n",
+       "    write_elements(A, B),\n",
+       "    write(B, ']').\n"
+      ]
+     },
+     "metadata": {
+      "application/json": {}
+     },
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "% Asserting clauses for user:write_JSON/2\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "            details  {\n",
+       "              font-family: Menlo, Consolas, 'DejaVu Sans Mono', monospace; font-size: 13px;\n",
+       "            }\n",
+       "\n",
+       "            details > summary {\n",
+       "              cursor: pointer;\n",
+       "            }\n",
+       "            </style>\n",
+       "            <details><summary>Previously defined clauses of user:write_members/2 were retracted (click to expand)</summary><pre>:- dynamic write_members/2.\n",
+       "\n",
+       "write_members([], _) :-\n",
+       "    !.\n",
+       "write_members([(A, B)], C) :-\n",
+       "    string(A),\n",
+       "    string(B),\n",
+       "    !,\n",
+       "    writeq(C, A),\n",
+       "    write(C, \" : \"),\n",
+       "    writeq(C, B).\n",
+       "write_members([(A, B)], C) :-\n",
+       "    string(A),\n",
+       "    number(B),\n",
+       "    !,\n",
+       "    writeq(C, A),\n",
+       "    write(C, \" : \"),\n",
+       "    writeq(C, B).\n",
+       "write_members([(A, json_obj(B))], C) :-\n",
+       "    string(A),\n",
+       "    !,\n",
+       "    writeq(C, A),\n",
+       "    write(C, \" : \"),\n",
+       "    write_JSON(json_obj(B), C).\n",
+       "write_members([(A, json_obj(B))|C], D) :-\n",
+       "    string(A),\n",
+       "    !,\n",
+       "    writeq(D, A),\n",
+       "    write(D, \" : \"),\n",
+       "    write_JSON(json_obj(B), D),\n",
+       "    write(D, ', '),\n",
+       "    write_members(C, D).\n",
+       "write_members([(A, json_array(B))], C) :-\n",
+       "    string(A),\n",
+       "    !,\n",
+       "    writeq(C, A),\n",
+       "    write(C, \" : \"),\n",
+       "    write_JSON(json_array(B), C).\n",
+       "write_members([(A, B)|C], D) :-\n",
+       "    !,\n",
+       "    write_members([(A, B)], D),\n",
+       "    write(D, \", \"),\n",
+       "    write_members(C, D).\n",
+       "</pre></details>"
+      ],
+      "text/plain": [
+       "Previously defined clauses of user:write_members/2 were retracted:\n",
+       ":- dynamic write_members/2.\n",
+       "\n",
+       "write_members([], _) :-\n",
+       "    !.\n",
+       "write_members([(A, B)], C) :-\n",
+       "    string(A),\n",
+       "    string(B),\n",
+       "    !,\n",
+       "    writeq(C, A),\n",
+       "    write(C, \" : \"),\n",
+       "    writeq(C, B).\n",
+       "write_members([(A, B)], C) :-\n",
+       "    string(A),\n",
+       "    number(B),\n",
+       "    !,\n",
+       "    writeq(C, A),\n",
+       "    write(C, \" : \"),\n",
+       "    writeq(C, B).\n",
+       "write_members([(A, json_obj(B))], C) :-\n",
+       "    string(A),\n",
+       "    !,\n",
+       "    writeq(C, A),\n",
+       "    write(C, \" : \"),\n",
+       "    write_JSON(json_obj(B), C).\n",
+       "write_members([(A, json_obj(B))|C], D) :-\n",
+       "    string(A),\n",
+       "    !,\n",
+       "    writeq(D, A),\n",
+       "    write(D, \" : \"),\n",
+       "    write_JSON(json_obj(B), D),\n",
+       "    write(D, ', '),\n",
+       "    write_members(C, D).\n",
+       "write_members([(A, json_array(B))], C) :-\n",
+       "    string(A),\n",
+       "    !,\n",
+       "    writeq(C, A),\n",
+       "    write(C, \" : \"),\n",
+       "    write_JSON(json_array(B), C).\n",
+       "write_members([(A, B)|C], D) :-\n",
+       "    !,\n",
+       "    write_members([(A, B)], D),\n",
+       "    write(D, \", \"),\n",
+       "    write_members(C, D).\n"
+      ]
+     },
+     "metadata": {
+      "application/json": {}
+     },
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "% Asserting clauses for user:write_members/2\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "            details  {\n",
+       "              font-family: Menlo, Consolas, 'DejaVu Sans Mono', monospace; font-size: 13px;\n",
+       "            }\n",
+       "\n",
+       "            details > summary {\n",
+       "              cursor: pointer;\n",
+       "            }\n",
+       "            </style>\n",
+       "            <details><summary>Previously defined clauses of user:write_elements/2 were retracted (click to expand)</summary><pre>:- dynamic write_elements/2.\n",
+       "\n",
+       "write_elements([], _) :-\n",
+       "    !.\n",
+       "write_elements([A], B) :-\n",
+       "    string(A),\n",
+       "    !,\n",
+       "    writeq(B, A).\n",
+       "write_elements([A], B) :-\n",
+       "    number(A),\n",
+       "    !,\n",
+       "    writeq(B, A).\n",
+       "write_elements([json_obj(A)], B) :-\n",
+       "    !,\n",
+       "    write_JSON(json_obj(A), B).\n",
+       "write_elements([json_array(A)], B) :-\n",
+       "    !,\n",
+       "    write_JSON(json_array(A), B).\n",
+       "write_elements([A|B], C) :-\n",
+       "    !,\n",
+       "    write_elements([A], C),\n",
+       "    write(C, \", \"),\n",
+       "    write_elements(B, C).\n",
+       "</pre></details>"
+      ],
+      "text/plain": [
+       "Previously defined clauses of user:write_elements/2 were retracted:\n",
+       ":- dynamic write_elements/2.\n",
+       "\n",
+       "write_elements([], _) :-\n",
+       "    !.\n",
+       "write_elements([A], B) :-\n",
+       "    string(A),\n",
+       "    !,\n",
+       "    writeq(B, A).\n",
+       "write_elements([A], B) :-\n",
+       "    number(A),\n",
+       "    !,\n",
+       "    writeq(B, A).\n",
+       "write_elements([json_obj(A)], B) :-\n",
+       "    !,\n",
+       "    write_JSON(json_obj(A), B).\n",
+       "write_elements([json_array(A)], B) :-\n",
+       "    !,\n",
+       "    write_JSON(json_array(A), B).\n",
+       "write_elements([A|B], C) :-\n",
+       "    !,\n",
+       "    write_elements([A], C),\n",
+       "    write(C, \", \"),\n",
+       "    write_elements(B, C).\n"
+      ]
+     },
+     "metadata": {
+      "application/json": {}
+     },
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "% Asserting clauses for user:write_elements/2\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "% JSON write on file definition:\n",
+    "% json_write/2\n",
+    "\n",
+    "json_write(JSON, FileName) :-\n",
+    "    atom(FileName),\n",
+    "    open(FileName, write, Out),\n",
+    "    gtrace,\n",
+    "    write_JSON(JSON, Out),\n",
+    "    close(Out).\n",
+    "\n",
+    "% Write json in a file definition:\n",
+    "% write_json/2\n",
+    "\n",
+    "% Case in which there is a json_obj\n",
+    "write_JSON(jsonobj(Members), Out) :-\n",
+    "    !,\n",
+    "    write(Out, '{'),\n",
+    "    write_members(Members, Out),\n",
+    "    write(Out, '}').\n",
+    "\n",
+    "% Case in which there is a json_array\n",
+    "write_JSON(jsonarray(Elements), Out) :-\n",
+    "    !,\n",
+    "    write(Out, '['),\n",
+    "    write_elements(Elements, Out),\n",
+    "    write(Out, ']').\n",
+    "\n",
+    "\n",
+    "\n",
+    "% Write members definition:\n",
+    "% write_members/2\n",
+    "\n",
+    "% Base case -> empty JSON\n",
+    "write_members([], _Out) :-\n",
+    "    !.\n",
+    "\n",
+    "% Base case -> string : string\n",
+    "write_members([(Chiave, Valore)], Out) :-\n",
+    "    string(Chiave),\n",
+    "    string(Valore),\n",
+    "    !,\n",
+    "    writeq(Out, Chiave),\n",
+    "    write(Out, \" : \"),\n",
+    "    writeq(Out, Valore).\n",
+    "\n",
+    "% Base case -> string : number\n",
+    "write_members([(Chiave, Valore)], Out) :-\n",
+    "    string(Chiave),\n",
+    "    number(Valore),\n",
+    "    !,\n",
+    "    writeq(Out, Chiave),\n",
+    "    write(Out, \" : \"),\n",
+    "    writeq(Out, Valore).\n",
+    "\n",
+    "% Base case -> string : json_Obj\n",
+    "write_members([(Chiave, json_obj(Members))], Out) :-\n",
+    "    string(Chiave),\n",
+    "    !,\n",
+    "    writeq(Out, Chiave),\n",
+    "    write(Out, \" : \"),\n",
+    "    write_JSON(json_obj(Members), Out).\n",
+    "\n",
+    "% Recursive case -> string : json_Obj\n",
+    "write_members([(Chiave, json_obj(Members)) | Members1], Out) :-\n",
+    "    string(Chiave),\n",
+    "    !,\n",
+    "    writeq(Out, Chiave),\n",
+    "    write(Out, \" : \"),\n",
+    "    write_JSON(json_obj(Members), Out),\n",
+    "    write(Out, ', '),\n",
+    "    write_members(Members1, Out).\n",
+    "\n",
+    "% Base case -> string : json_Array\n",
+    "write_members([(Chiave, json_array(Elements))], Out) :-\n",
+    "    string(Chiave),\n",
+    "    !,\n",
+    "    writeq(Out, Chiave),\n",
+    "    write(Out, \" : \"),\n",
+    "    write_JSON(json_array(Elements), Out).\n",
+    "\n",
+    "% Recursive case -> more than just a member\n",
+    "write_members([(Chiave, Valore) | Members], Out) :-\n",
+    "    !,\n",
+    "    write_members([(Chiave, Valore)], Out),\n",
+    "    write(Out, \", \"),\n",
+    "    write_members(Members, Out).\n",
+    "\n",
+    "\n",
+    "\n",
+    "% Write Elements definition:\n",
+    "% write_elements/2\n",
+    "\n",
+    "% Base case: empty array\n",
+    "write_elements([], _Out) :-\n",
+    "    !.\n",
+    "% Base case: element is a string\n",
+    "write_elements([Element], Out) :-\n",
+    "    string(Element),\n",
+    "    !,\n",
+    "    writeq(Out, Element).\n",
+    "\n",
+    "% Base case: element is a number\n",
+    "write_elements([Element], Out) :-\n",
+    "    number(Element),\n",
+    "    !,\n",
+    "    writeq(Out, Element).\n",
+    "\n",
+    "% Base case: element is a json_obj\n",
+    "write_elements([json_obj(Members)], Out) :-\n",
+    "    !,\n",
+    "    write_JSON(json_obj(Members), Out).\n",
+    "\n",
+    "% Base case: element is a json_array\n",
+    "write_elements([json_array(Elements)], Out) :-\n",
+    "    !,\n",
+    "    write_JSON(json_array(Elements), Out).\n",
+    "\n",
+    "% Recursive case: more than just an element\n",
+    "write_elements([Element | Elements], Out) :-\n",
+    "    !,\n",
+    "    write_elements([Element], Out),\n",
+    "    write(Out, \", \"),\n",
+    "    write_elements(Elements, Out)."
    ]
   },
   {
@@ -45,9 +488,40 @@
    "execution_count": null,
    "id": "c962d99b-51cb-49f4-904f-4436657f1698",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[1;31mERROR: '$stream_property'/2: stream `user_error' does not exist\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "jsonread(\"in.txt\", X)."
+    "jsonread(\"in.txt\", X),\n",
+    "json_write(X, 'out.txt')."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "7c7d5d6c-c819-4c78-90dd-0a63f5fcc40f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[1mA = ciao.txt"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "atom_string(A, 'ciao.txt')"
    ]
   },
   {
