PROLOG- pre consegna, manca un refactor e via

--- a/prolog/Untitled.ipynb
+++ b/prolog/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "id": "6356aebd-d176-4958-8495-b85983e16bec",
    "metadata": {},
    "outputs": [
@@ -18,6 +18,68 @@
    ],
    "source": [
     "[jsonparse]."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "4a7715c3-696f-4aa1-ab34-a87b1d14903c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[1mtrue"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "[tokenizer]."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "adb6e047-c03d-410a-b76c-ff243842d5c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[1mX = [OPENCURLY,CLOSEDCURLY,string(ciao)]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "string_tokens(' {} \"ciao\" ', X)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "9229e833-7d15-4148-92a8-67d08cf260d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[1mX = jsonobj([(nome,arthur)]),\n",
+       "Y = nome,arthur"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "jsonparse('{\"nome\" : \"arthur\"}', X),\n",
+    "X = jsonobj([Y])."
    ]
   },
   {
